--- a/projectsPage/projects.html
+++ b/projectsPage/projects.html
@@ -6,17 +6,13 @@
     <link rel="stylesheet" href="projectStyles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet"> 
-    <!--
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital@0;1&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Raleway:wght@600&display=swap" rel="stylesheet"> 
-    -->
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Raleway:wght@400;600;700&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/95d22950d7.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
     <div class="pageContainer">
-        <h1 class="projectsHeader">Projects</h1>
+        <h1 class="projectsHeader">Notable Projects</h1>
         <a class="homeBtn" href="../index.html"><i class="fas fa-home"></i></a>
         <div class="projectCardContainer">
         </div>
