--- a/aboutPage/about.html
+++ b/aboutPage/about.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="aboutStyles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Raleway:wght@400;600;700&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/95d22950d7.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -15,6 +16,8 @@
         <div class="infoPanel">
             <div class="portrait"></div>
             <div class="infoContainer">
+                Hi, there! My name is Isabella Capriotti, and I'm a second-year Computer Science student at the University of Nevada, Las Vegas. When I'm not writing code, I'm probably taking
+                care of one of my 16 (and counting!) houseplants, planning my next outfit, or reading a good book. 
             </div>
         </div>
     </main>
