--- a/projectsPage/projects.html
+++ b/projectsPage/projects.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="pageContainer">
-        <h1 class="projectsHeader">Notable Projects</h1>
+        <h1 class="projectsHeader">Projects</h1>
         <a class="homeBtn" href="../index.html"><i class="fas fa-home"></i></a>
         <div class="projectCardContainer">
         </div>
