--- a/aboutPage/about.html
+++ b/aboutPage/about.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <h1 class="greeting"> NICE TO MEET YOU! </h1>
-        <a class="homeBtn" href="../index.html"><i class="fas fa-home"></i></a>
+        <a class="homeBtn" href="index.html"><i class="fas fa-home"></i></a>
         <div class="infoPanel">
             <div class="portrait"></div>
             <div class="infoContainer">
