--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
        
         <nav>
             <ul class="navLinks">
-                <li><a href="aboutPage/about.html">About</a></li>
-                <li><a href="projectsPage/projects.html">Projects</a></li>
-                <li><a href="contactPage/contact.html">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="https://github.com/IsabellaCapriotti"><i class="fab fa-github githubLogo"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/isabella-capriotti-8572221b3/"><i class="fab fa-linkedin linkedinLogo"></i></a></li>
             </ul>
