--- a/projectsPage/projects.html
+++ b/projectsPage/projects.html
@@ -13,7 +13,7 @@
 <body>
     <div class="pageContainer">
         <h1 class="projectsHeader">Projects</h1>
-        <a class="homeBtn" href="../index.html"><i class="fas fa-home"></i></a>
+        <a class="homeBtn" href="index.html"><i class="fas fa-home"></i></a>
         <div class="projectCardContainer">
         </div>
     </div>
