Added reCAPTCHA to Contact page

--- a/contactPage/contact.html
+++ b/contactPage/contact.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Raleway:wght@400;600;700&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/95d22950d7.js" crossorigin="anonymous"></script>
-
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
     <main>
@@ -23,6 +23,7 @@
                     <input type="text" class="emailSubject" placeholder="Subject">
                     <textarea class="emailBody" placeholder="Message body"></textarea>
                 </div>
+                <div class="g-recaptcha" data-sitekey="6LfeDBAaAAAAAKaYsS4c4gduaq4qemy2I-gdG1gq"></div>
                 <button class="sendBtn">Send</button>
             </form>
         </div>
