--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Contact Me</title>
+    <link rel="icon" href="sunIcon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="contactStyles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
