--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Isabella Capriotti</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="sunIcon.ico">
     <link rel="stylesheet" href="mainPagestyles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet"> 
