Finished About page

--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Isabella Capriotti</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="sunIcon.ico">
     <link rel="stylesheet" href="aboutStyles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -17,8 +17,16 @@
         <div class="infoPanel">
             <div class="portrait"></div>
             <div class="infoContainer">
-                Hi, there! My name is Isabella Capriotti, and I'm a second-year Computer Science student at the University of Nevada, Las Vegas. When I'm not writing code, I'm probably taking
-                care of one of my 16 (and counting!) houseplants, planning my next outfit, or reading a good book. 
+                Hi, there! My name is Isabella Capriotti. I study computer science at the University of Nevada, Las Vegas, and I also teach it at Juni Learning! I've been 
+                fascinated with computing ever since childhood, where I pored over pages describing glitches in my favorite video games for hours, trying to make sense of the
+                the magic behind the screen. I was wading knee-deep through vocabulary and concepts that were well over my head; and yet, I would still tirelessly report to my 
+                parents what I found out about, with a naive understanding of technology but no shortness of enthusiasm. There were many points where I would have eagerly
+                jumped on the chance to start writing code for myself; however, there was no one in my life to give me that push. I hadn't even heard of people who program for
+                a living until high school! I regret that I didn't get a head start on doing what I love, so I've dedicated myself to being that voice of encouragement for
+                others. Educating the next generation of innovators as a computer science instructor has been one piece of it. I also hold executive board positions in
+                my university's branches of Girls Who Code and Scientista, with the goal of introducing the world of technology to those who have been systemically shut
+                out of it. When I'm not writing code, you'll probably find me taking care of one of my 16 (and counting!) houseplants, planning my next outfit, or reading a 
+                good book. Thank you for visiting my little website, and please feel free to reach out! 
             </div>
         </div>
     </main>
