Flattened file structure

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Isabella Capriotti</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="sunIcon.ico">
     <link rel="stylesheet" href="mainPagestyles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet"> 
@@ -36,9 +37,9 @@
        
         <nav>
             <ul class="navLinks">
-                <li><a href="aboutPage/about.html">About</a></li>
-                <li><a href="projectsPage/projects.html">Projects</a></li>
-                <li><a href="contactPage/contact.html">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="https://github.com/IsabellaCapriotti"><i class="fab fa-github githubLogo"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/isabella-capriotti-8572221b3/"><i class="fab fa-linkedin linkedinLogo"></i></a></li>
             </ul>
