--- a/about.html
+++ b/about.html
@@ -15,18 +15,23 @@
         <h1 class="greeting"> NICE TO MEET YOU! </h1>
         <a class="homeBtn" href="index.html"><i class="fas fa-home"></i></a>
         <div class="infoPanel">
-            <div class="portrait"></div>
+                <div class="portrait"></div>
             <div class="infoContainer">
-                Hi, there! My name is Isabella Capriotti. I study computer science at the University of Nevada, Las Vegas, and I also teach it at Juni Learning! I've been 
-                fascinated with computing ever since childhood, where I pored over pages describing glitches in my favorite video games for hours, trying to make sense of the
+                <p>
+                Hi, there! My name is Isabella Capriotti. I'm a computer science student at the University of Nevada, Las Vegas and a software development intern at Conagra Brands.
+                I've been fascinated with computing ever since childhood, where I pored over pages describing glitches in my favorite video games for hours, trying to make sense of the
                 the magic behind the screen. I was wading knee-deep through vocabulary and concepts that were well over my head; and yet, I would still tirelessly report to my 
                 parents what I found out about, with a naive understanding of technology but no shortness of enthusiasm. There were many points where I would have eagerly
                 jumped on the chance to start writing code for myself; however, there was no one in my life to give me that push. I hadn't even heard of people who program for
                 a living until high school! I regret that I didn't get a head start on doing what I love, so I've dedicated myself to being that voice of encouragement for
-                others. Educating the next generation of innovators as a computer science instructor has been one piece of it. I also hold executive board positions in
+                others. Educating the next generation of innovators as a computer science instructor at Juni Learning has been one piece of it. I also hold executive board positions in
                 my university's branches of Girls Who Code and Scientista, with the goal of introducing the world of technology to those who have been systemically shut
                 out of it. When I'm not writing code, you'll probably find me taking care of one of my 16 (and counting!) houseplants, planning my next outfit, or reading a 
                 good book. Thank you for visiting my little website, and please feel free to reach out! 
+                </p>
+
+                <a id="resumeLink" href="https://docs.google.com/document/d/1JozM-v71wY_TkH6fEIrTTDMo1tYv4Vz76m1mCzEnlLU/edit?usp=sharing">View Resume</a>
+
             </div>
         </div>
     </main>
