Re-organized file structure into folders

--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
     <title>About Isabella Capriotti</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="sunIcon.ico">
-    <link rel="stylesheet" href="aboutStyles.css">
+    <link rel="icon" href="assets/sunIcon.ico">
+    <link rel="stylesheet" href="css/aboutStyles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Raleway:wght@400;600;700&display=swap" rel="stylesheet"> 
@@ -36,6 +36,6 @@
         </div>
     </main>
     
-    <script src="about.js"></script>
+    <script src="js/about.js"></script>
 </body>
 </html>
