--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <title>Contact Me</title>
-    <link rel="icon" href="sunIcon.ico">
+    <link rel="icon" href="assets/sunIcon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="contactStyles.css">
+    <link rel="stylesheet" href="css/contactStyles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Raleway:wght@400;600;700&display=swap" rel="stylesheet"> 
@@ -29,6 +29,6 @@
             </form>
         </div>
     </main>
-    <script src="contact.js"></script>
+    <script src="js/contact.js"></script>
 </body>
 </html>
