--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>Isabella Capriotti</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="sunIcon.ico">
-    <link rel="stylesheet" href="mainPagestyles.css">
+    <link rel="icon" href="assets/sunIcon.ico">
+    <link rel="stylesheet" href="css/mainPagestyles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital@0;1&display=swap" rel="stylesheet">
@@ -46,6 +46,6 @@
         </nav>
     </div>
 
-    <script src="mainPage.js"></script>
+    <script src="js/mainPage.js"></script>
 </body>
 </html>
