--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <Title>Projects</Title>
-    <link rel="icon" href="sunIcon.ico">
-    <link rel="stylesheet" href="projectStyles.css">
+    <link rel="icon" href="assets/sunIcon.ico">
+    <link rel="stylesheet" href="css/projectStyles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Raleway:wght@400;600;700&display=swap" rel="stylesheet"> 
@@ -19,6 +19,6 @@
         </div>
     </div>
 
-    <script src="projects.js"></script>
+    <script src="js/projects.js"></script>
 </body>
 </html>
